# khpi-corporate-systems

./: .env  Makefile  README.md  client.py  docker-compose.yml  product_cli.py  schema.md
admin/: Dockerfile  pom.xml
admin/src/main/resources/: application.properties
app/: Dockerfile  pom.xml
app/src/main/resources/: application.properties  data.sql  schema.sql
auth/: Dockerfile  pom.xml
auth/src/main/resources/: application.yml  data.sql  schema.sql
client/: .gitignore  Dockerfile  README.md  index.html  package.json  vite.config.js
client/legacy-templates/: cart.html  index.html  register.html
client/src/: App.jsx  index.css
docker/common/: .profile
docker/services/mysql/: Dockerfile  my.cnf
docker/services/mysql/migrations/: 01-databases.sql
gateway/: Dockerfile  pom.xml
http/: products.http
make/: commands  containers  docker
order/: Dockerfile  pom.xml
product/: Dockerfile  pom.xml
pyshop/: .env.example  .gitignore  README.md  pyproject.toml
pyshop/src/pyshop/: config.py  database.py  dependencies.py  main.py  messaging.py  models.py
pyshop/src/pyshop/routers/: __init__.py  auth.py  cart_api.py  orders.py  pages.py  products.py
pyshop/src/pyshop/schemas/: __init__.py  order.py  product.py  user.py
pyshop/src/pyshop/scripts/: seed_data.py
pyshop/src/pyshop/services/: cart.py  cart_session.py  order_service.py  user_service.py
pyshop/src/pyshop/templates/: base.html  cart.html  checkout-confirm.html  checkout.html  index.html  login.html  order-confirmed.html  orders.html  products.html  register.html
(+114 files in other folders)
